# ev-price-tracker-scraper

./: .env  .gitignore  .pre-commit-config.yaml  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
backfill/: main.py
scraper/: items.py  pipelines.py  settings.py
scraper/spiders/: lucid.py  rivian.py  tesla.py
scraper/sql/: check_evprice_empty.sql  check_evprice_last_msrp.sql  create_evprice.sql  insert_evprice_new_msrp.sql
